<resources>
    <string name="app_name">CalculatorApp</string>
    <string name="btn_0">0</string>
    <string name="btn_1">1</string>
    <string name="btn_2">2</string>
    <string name="btn_3">3</string>
    <string name="btn_4">4</string>
    <string name="btn_5">5</string>
    <string name="btn_6">6</string>
    <string name="btn_7">7</string>
    <string name="btn_8">8</string>
    <string name="btn_9">9</string>
    <string name="btn_add">+</string>
    <string name="btn_sub">-</string>
    <string name="btn_mul">*</string>
    <string name="btn_div">/</string>
    <string name="btn_equals">=</string>
    <string name="btn_clear">C</string>
    <string name="btn_custom">Custom Op</string>
    <string name="display_default">0</string>

    <!-- Accessibility content descriptions -->
    <string name="desc_0">zero</string>
    <string name="desc_1">one</string>
    <string name="desc_2">two</string>
    <string name="desc_3">three</string>
    <string name="desc_4">four</string>
    <string name="desc_5">five</string>
    <string name="desc_6">six</string>
    <string name="desc_7">seven</string>
    <string name="desc_8">eight</string>
    <string name="desc_9">nine</string>
    <string name="desc_add">add</string>
    <string name="desc_sub">subtract</string>
    <string name="desc_mul">multiply</string>
    <string name="desc_div">divide</string>
    <string name="desc_equals">equals</string>
    <string name="desc_clear">clear</string>
    <string name="desc_custom">custom operator</string>
</resources>